[fix] (ABC-683): Only display visible days of multi-day events in agenda

--- a/src/modules/base/primitiveSchedulerAgenda/primitiveSchedulerAgenda.css
+++ b/src/modules/base/primitiveSchedulerAgenda/primitiveSchedulerAgenda.css
@@ -31,3 +31,7 @@
     min-width: 6rem;
     font-size: 0.75rem;
 }
+
+.avonni-scheduler__agenda-no-event-wrapper {
+    height: 100%;
+}
